fix: posts alignment, page padding, page animation and page colors

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,10 +6,12 @@
     0% {
         opacity: 0;
         transform: translateY(-20px);
+        transition: transform 0.3s ease-in-out;
     }
     100% {
         opacity: 1;
         transform: translateY(0);
+        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
     }
 }
 
@@ -17,19 +19,23 @@
     0% {
         opacity: 1;
         transform: translateY(0);
+        transition: transform 4.3s ease-in-out, opacity 1.3s ease-in-out;
     }
     100% {
-        opacity: 1;
+        opacity: 0;
         transform: translateY(-20px);
+        transition: transform 4.3s ease-in-out, opacity 1.3s ease-in-out;
     }
 }
 
 .animate-slide-in {
     animation: fade-in 0.5s ease-out forwards;
+    transition: animation 0.3s ease-in-out;
 }
 
 .animate-slide-out {
     animation: fade-out 0.5s ease-out forwards;
+    transition: animation 0.3s ease-in-out;
 }
 
 .options {
