--- a/src/app/pages/view-all/view-all.component.css
+++ b/src/app/pages/view-all/view-all.component.css
@@ -1,3 +1,64 @@
+.welcome {
+    h2 {
+        font-family: "Viaoda Libre", serif;
+        font-size: 110px;
+    }
+
+    h1 {
+        font-family: "Snell", serif;
+        font-size: 160px;
+    }
+
+    h3 {
+        font-size: 80px;
+        font-family: "Viaoda Libre", serif;
+        color: #F6BAC6;
+        width: 25%;
+        text-align: start;
+        line-height: 76px;
+    }
+
+    span {
+        font-size: 18px;
+        font-family: "Viaoda Libre", serif;
+        margin: -10px 0px -110px 260px;
+    }
+
+    p {
+        font-family: "Josefin slab", serif;
+        font-size: 16px;
+        width: 100%;
+        text-align: start;
+    }
+
+    .read {
+        margin-right: 160px;
+        margin-top: -100px;
+    }
+}
+
+.recent h3 {
+    font-family: "Josefin slab", serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: white;
+    padding: 10px;
+    transform: translateY(-30px);
+    width: 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    background-color: #DCD1C2;
+    border-radius: 12px;
+}
+
+.animate-fade-in {
+    animation: fade-in 1.8s ease-out forwards;
+    transition: animation 0.3s ease-in-out;
+}
+
 .post .excerpt {
     opacity: 0;
     max-height: 0;
@@ -34,4 +95,17 @@
 
 .above {
     transition: background-color 0.3s ease-in-out;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+        transition: transform 0.3s ease-in-out;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    }
 }
